# Blog-writer_agent

./: .env.example  .gitignore  Agentic_Metadata_RAG_Architecture.drawio  ArXiv_Agent_Technical_Proposal.docx  README.md  Weekly_Report_Mar09-13_2026 (1).docx  arxiv-agent-workflow.drawio  index.html  pyproject.toml  requirement.txt  server.py
src/blog_agent/: __init__.py  agent.py  cli.py  config.py  graph.py  llm.py  models.py  nodes.py  prompts.py  state.py  tools.py
tests/: __init__.py  conftest.py  test_models.py
